--- a/src/AppBundle/Resources/public/less/common.css
+++ b/src/AppBundle/Resources/public/less/common.css
@@ -15,9 +15,15 @@
 body {
   text-align: center;
   font-family: 'HelveticaNeue-Light';
+  background: #EEEEEE;
 }
 a {
   cursor: pointer !important;
+  color: #fc113c;
+}
+.btn-primary {
+  background: #383838;
+  border: 1px solid #050505;
 }
 h1.blue-text {
   font-size: 22px;
@@ -38,10 +44,13 @@ h1.blue-text {
   width: 100%;
   margin: 0 auto;
   text-align: left;
+  background: #FFFFFF;
 }
 .slider {
-  height: 240px;
+  height: 400px;
   overflow: hidden;
+  margin-left: -15px;
+  margin-right: -15px;
 }
 .slider img {
   width: 100%;
@@ -57,11 +66,11 @@ h1.blue-text {
   height: 100%;
 }
 #logo {
-  width: 130px;
+  width: 200px;
   margin: 5px;
 }
 #search {
-  width: 230px;
+  width: 400px;
 }
 .navbar-form {
   padding-top: 23px;
@@ -78,96 +87,80 @@ h1.blue-text {
 .nomenu:hover {
   background: none !important;
 }
+.navbar-collapse {
+  padding: 0;
+}
 nav {
-  -webkit-box-shadow: 0px 3px 8px -3px rgba(50, 50, 50, 0.5);
-  -moz-box-shadow: 0px 3px 8px -3px rgba(50, 50, 50, 0.5);
-  box-shadow: 0px 3px 8px -3px rgba(50, 50, 50, 0.5);
   border-radius: 0;
+}
+nav.navbar {
+  margin-bottom: 0;
+  min-height: inherit;
+  margin-left: -15px;
+  margin-right: -15px;
 }
 nav .navbar-nav {
   border-radius: 0;
   width: 100%;
   display: table;
 }
-nav .navbar-nav li:not(:last-child) {
-  border-right: 1px solid #DDD;
-}
 nav .navbar-nav li {
+  border-bottom: 5px solid #FFF;
+  font-size: 13px;
   position: relative;
   text-align: center;
   float: none;
   display: table-cell;
   text-transform: uppercase;
 }
-nav .navbar-nav li a:hover {
-  color: #FFFFFF;
-  background: #337AB7;
-}
-nav .navbar-nav li a {
-  text-transform: uppercase;
-}
-nav .navbar-nav li.active {
-  background: #337AB7;
-  color: #FFFFFF;
-}
 nav .navbar-nav li.active a {
   color: #FFFFFF;
-  text-transform: uppercase;
+  background: #fc113c;
 }
-nav .navbar-nav li.active a:focus {
+nav .navbar-nav li a {
+  padding-bottom: 8px;
+  color: #383838;
+}
+nav .navbar-nav li a:hover {
   background: none;
+  color: #fc113c;
 }
-nav .navbar-nav li:focus {
-  background: none;
-}
-nav .navbar-nav li .submunu {
+nav .navbar-nav li .submenu {
   transition: visibility 0s, opacity 0.5s ease;
+  position: absolute;
   visibility: hidden;
   opacity: 0;
-  position: absolute;
-  z-index: 50;
-  width: 100%;
-  background: none;
-  border-left: 1px solid #337AB7;
-  border-right: 1px solid #337AB7;
+  z-index: 55;
+  padding-top: 5px;
 }
-nav .navbar-nav li .submunu ul li:nth-child(1) {
-  border-top: 1px solid #337AB7;
+nav .navbar-nav li .submenu .submenu-items {
+  background: #fc113c;
+  padding: 5px 10px;
+  width: 300px;
 }
-nav .navbar-nav li .submunu ul li {
-  width: 100%;
-  display: block;
-  background: rgba(51, 122, 183, 0.9);
-  color: #FFF;
-  border: 0;
-  border-top: 1px solid #FFF;
+nav .navbar-nav li .submenu .submenu-items li {
   text-align: left;
-  padding: 10px 5px 10px 20px;
+  display: block;
+  padding: 5px;
 }
-nav .navbar-nav li .submunu ul li a {
-  text-decoration: none;
+nav .navbar-nav li .submenu .submenu-items li:last-child {
+  border-bottom: 0;
 }
-nav .navbar-nav li .submunu ul li a:hover {
-  background: none;
+nav .navbar-nav li .submenu .submenu-items li a {
+  color: #FFFFFF;
 }
-nav .navbar-nav li .submunu ul li:hover {
-  background: #337ab7;
-  color: #337AB7;
-  cursor: pointer;
+nav .navbar-nav li .submenu .submenu-items li a:hover {
+  color: #fc113c;
 }
-nav .navbar-nav li ~ :hover .submunu {
+nav .navbar-nav li:hover .submenu {
   visibility: visible;
   opacity: 1;
 }
-.collapse.navbar-collapse {
-  padding: 0;
-}
 nav .navbar-nav li:hover {
-  background: #337AB7;
-  color: #FFF;
+  color: #fc113c;
 }
 nav .navbar-nav li:hover a {
-  color: #FFF;
+  color: #fc113c;
 }
 @media screen and (min-width: 768px) {
   .modal:before {
@@ -246,24 +239,23 @@ footer {
   margin-top: 30px;
 }
 .footer1 {
-  background: #1f395e;
+  background: #242424;
   color: #FFFFFF;
   padding: 20px 0 20px 0;
-}
-.footer2 {
-  background: #252c36;
-  color: #166aa6;
-  padding: 20px;
 }
 .social-icon {
   width: 42px;
   margin-right: 10px;
 }
-.contact-icon {
-  width: 60px;
-}
 .footer-other li {
   padding: 5px;
+}
+.footer-other li a {
+  color: #7e7878;
+}
+.footer-other li a:hover {
+  color: #FFF;
+  text-decoration: none;
 }
 .contacts {
   padding-left: 30px;
@@ -358,10 +350,10 @@ div:hover > .editor {
   display: block;
 }
 .owl-item {
-  height: 430px;
+  height: 500px;
 }
 .owl-item .item img {
-  height: 430px;
+  height: 500px;
 }
 table.table-vertical-middle tr td {
   vertical-align: middle;
