--- a/src/AppBundle/Resources/public/less/common.less
+++ b/src/AppBundle/Resources/public/less/common.less
@@ -14,18 +14,29 @@
 }
 
 @color-blue: #337AB7;
+@color-red: #fc113c;
 @color-white: #FFFFFF;
+@color-black: #383838;
 
 @uppercase: uppercase;
 
 body{
     text-align: center;
     font-family: 'HelveticaNeue-Light';
+    background: #EEEEEE;
 
 }
 a{
     cursor: pointer !important;
+    color: #fc113c;
 }
+
+
+.btn-primary{
+    background: #383838;
+    border: 1px solid darken(#383838,20%);
+}
+
 //.blue-text{
 //    color: #0166ff;
 //}
@@ -50,10 +61,13 @@ h1.blue-text{
     width: 100%;
     margin: 0 auto;
     text-align: left;
+    background: #FFFFFF;
 }
 .slider{
-    height: 240px;
+    height: 400px;
     overflow: hidden;
+    margin-left: -15px;
+    margin-right: -15px;
     img{
         width: 100%;
     }
@@ -69,11 +83,11 @@ h1.blue-text{
     height: 100%;
 }
 #logo{
-    width: 130px;
+    width: 200px;
     margin: 5px;
 }
 #search{
-    width: 230px;
+    width: 400px;
 }
 .navbar-form{
     padding-top: 23px;
@@ -92,107 +106,95 @@ h1.blue-text{
     }
 }
 
+.navbar-collapse{
+    padding: 0;
+}
 nav{
-    -webkit-box-shadow: 0px 3px 8px -3px rgba(50, 50, 50, 0.5);
-    -moz-box-shadow:    0px 3px 8px -3px rgba(50, 50, 50, 0.5);
-    box-shadow:         0px 3px 8px -3px rgba(50, 50, 50, 0.5);
     border-radius: 0;
+    &.navbar{
+        margin-bottom: 0;
+        min-height: inherit;
+        margin-left: -15px;
+        margin-right: -15px;
+    }
     .navbar-nav{
         border-radius: 0;
         width: 100%;
         display:table;
         //border-bottom: 1px solid #EEEEEE;
         //table-layout:fixed;
-        li:last-child{
-            //border-right: 1px solid #DDD;
-        }
-        li:not(:last-child){
-            border-right: 1px solid #DDD;
-        }
         li{
+            border-bottom: 5px solid #FFF;
+            font-size: 13px;
             position: relative;
             text-align: center;
             float: none;
             display:table-cell;
             text-transform: @uppercase;
-            a:hover{
+            &.active{
+                //border-bottom: 5px solid #004889;
+            }
+            &.active a{
                 color: @color-white;
-                background: @color-blue;
-                //    text-transform: @uppercase;
+                background: @color-red;
             }
             a{
-                text-transform: @uppercase;
-            }
-            &.active{
-                background: @color-blue;
-                color: @color-white;
-                a{
-                    color: @color-white;
-                    text-transform: @uppercase;
-                    &:focus{
-                        background: none;
-                    }
+                padding-bottom: 8px;
+                color: @color-black;
+                &:hover{
+                    background: none;
+                    color: @color-red;
                 }
             }
-            &:focus{
-                background: none;
-            }
-            .submunu{
+            .submenu{
                 transition: visibility 0s, opacity 0.5s ease;
+                position: absolute;
+                //display: none;
                 visibility: hidden;
                 opacity: 0;
-                position: absolute;
-                z-index: 50;
-                width: 100%;
-                //border: 1px solid #DDD;
-                background: none;
-                //background: #FEFEFE;
-                border-left: 1px solid #337AB7;
-                border-right: 1px solid #337AB7;
-                ul li:nth-child(1){
-                    border-top: 1px solid #337AB7;
-                }
-                ul li{
-                    width: 100%;
-                    display: block;
-                    background: rgba(51,122,183,0.9);
-                    color: #FFF;
-                    border: 0;
-                    //border-bottom: 1px solid #FFF;
-                    border-top: 1px solid #FFF;
-                    //margin-top: -1px;
-                    text-align: left;
-                    padding: 10px 5px 10px 20px;
-                    a{
-                        text-decoration: none;
+                z-index: 55;
+                padding-top: 5px;
+                .submenu-items{
+                    background: @color-red;
+                    padding: 5px 10px;
+                    width: 300px;
+                    //border-left: 1px solid #F15B23;
+                    //border-right: 1px solid #F15B23;
+                    //border-bottom: 1px solid #F15B23;
+                    li{
+                        &:not(:last-child){
+                            //border-bottom: 1px solid #0b58a2;
+                        }
+                        &:last-child{
+                            border-bottom: 0;
+                        }
+                        //background: #004889;
+                        text-align: left;
+                        display: block;
+                        padding: 5px;
+                        a{
+                            color: #FFFFFF;
+                            &:hover{
+                                color: @color-red;
+                            }
+                        }
                     }
-                    a:hover{
-                        background: none;
-                    }
-                }
-                ul li:hover{
-                    background: rgba(51, 122, 183, 1);
-                    color: #337AB7;
-                    cursor: pointer;
                 }
             }
-            ~:hover .submunu{
+            &:hover .submenu{
                 visibility: visible;
                 opacity: 1;
             }
+
         }
     }
 }
-.collapse.navbar-collapse{
-    padding: 0;
-}
-
 
 nav .navbar-nav li:hover{
-    background: #337AB7;
-    color: #FFF;
+    //background: #337AB7;
+    color: @color-red;
     a{
-        color: #FFF;
+        color: @color-red;
     }
 }
 
@@ -276,14 +278,9 @@ footer{
     margin-top: 30px;
 }
 .footer1{
-    background: #1f395e;
+    background: #242424;
     color: @color-white;
     padding: 20px 0 20px 0;
-}
-.footer2{
-    background: #252c36;
-    color: #166aa6;
-    padding: 20px;
 }
 
 .social-icon {
@@ -292,10 +289,17 @@ footer{
 }
 
 .contact-icon {
-    width: 60px;
+    //width: 60px;
 }
 .footer-other li{
     padding: 5px;
+    a{
+        color: #7e7878;
+        &:hover{
+            color: #FFF;
+            text-decoration: none;
+        }
+    }
 }
 .contacts{
     padding-left: 30px;
@@ -389,10 +393,10 @@ div:hover>.editor{
 }
 
 .owl-item {
-    height: 430px;
+    height: 500px;
     .item{
         img{
-            height: 430px;
+            height: 500px;
         }
     }
 }
