--- a/src/AppBundle/Resources/views/menu.html.twig
+++ b/src/AppBundle/Resources/views/menu.html.twig
@@ -12,23 +12,25 @@
 
     <div class="collapse navbar-collapse" id="menu">
         <ul class="nav navbar-nav">
-            <li class="nomenu"></li>
-            {% for m in menu %}
-            {#<li class="active"><a href="">Главная</a></li>#}
+            <li class="active"><a href="{{ path('homepage') }}">Главная</a></li>
             <li>
-                <a href="{{ m.url }}">{{ m.title }} {{ m.children | length > 0 ? ' <span class="fa fa-angle-down"></span>' }}</a>
-                {% if m.children | length > 0 %}
-                    <div class="submunu">
-                        <ul>
-                            {% for sm in m.children %}
-                                <li><a href="{{ sm.url }}">{{ sm.title }}</a></li>
-                            {% endfor %}
-                        </ul>
-                    </div>
-                {% endif %}
+                <a href="#">Об организации</a>
+                {#<div class="submenu">#}
+                    {#<ul class="submenu-items">#}
+                        {#<li><a href="">Цели и задачи</a></li>#}
+                    {#</ul>#}
+                {#</div>#}
             </li>
-            {% endfor %}
-            <li class="nomenu"></li>
+            <li><a href="">Новости</a></li>
+            <li>
+                <a href="#">Мероприятия</a>
+            </li>
+            <li>
+                <a href="#">Самодиагностика</a>
+            </li>
+            <li>
+                <a href="#">Лечебная физкультура</a>
+            </li>
         </ul>
     </div><!-- /.navbar-collapse -->
 </nav>
