--- a/src/AppBundle/Resources/views/menu.html.twig
+++ b/src/AppBundle/Resources/views/menu.html.twig
@@ -12,7 +12,7 @@
 
     <div class="collapse navbar-collapse" id="menu">
         <ul class="nav navbar-nav">
-            <li class="active"><a href="{{ path('homepage') }}">Главная</a></li>
+            <li class="active"><a href="{{ path('homepage') }}">КОНФЕРЕНЦИИ</a></li>
             <li>
                 <a href="#">Об организации</a>
                 {#<div class="submenu">#}
@@ -21,16 +21,20 @@
                     {#</ul>#}
                 {#</div>#}
             </li>
-            <li><a href="">Новости</a></li>
+            <li><a href="">РОССИЙСКИЕ МЕРОПРИЯТИЯ</a></li>
             <li>
-                <a href="#">Мероприятия</a>
+                <a href="#">ЗАГРАНИЧНЫЕ МЕРОПРИЯТИЯ</a>
             </li>
             <li>
-                <a href="#">Самодиагностика</a>
+                <a href="#">КУРСЫ ФПДО</a>
             </li>
             <li>
-                <a href="#">Лечебная физкультура</a>
+                <a href="#">ОНЛАЙН ОБУЧЕНИЕ</a>
+            </li>
+            <li>
+                <a href="#">СТАЖИРОВКИ</a>
             </li>
         </ul>
     </div><!-- /.navbar-collapse -->
 </nav>
+<br />
