--- a/app/Resources/FOSUserBundle/views/fos_layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/fos_layout.html.twig
@@ -8,6 +8,6 @@
     {{ parent() }}
 {% endblock %}
 
-{% block fullContent %}
+{% block content %}
 	{% block fos_user_content %}{% endblock fos_user_content %}
 {% endblock %}
