--- a/src/AppBundle/Resources/public/less/common.less
+++ b/src/AppBundle/Resources/public/less/common.less
@@ -546,3 +546,56 @@ th.prev, th.next, th.picker-switch{
     padding-top: 10px;
     border-bottom: 1px dashed @color-black;
 }
+
+.event-carusel{
+    overflow: hidden;
+    .item{
+        float: left;
+        width: 25%;
+        div{
+            padding: 0 5px;
+            text-align: right;
+            img{
+                width: 90%;
+                -webkit-filter: grayscale(100%);
+                filter: grayscale(100%);
+                -moz-filter: grayscale(100%);
+                &:hover{
+                    -webkit-filter: grayscale(0%);
+                    filter: grayscale(0%);
+                    -moz-filter: grayscale(0%);
+                    cursor: pointer;
+                }
+            }
+            .event-date{
+                width: 64px;
+                height: 64px;
+                padding-top: 15px;
+                background: @color-red;
+                border-radius: 50%;
+                margin-top: -80px;
+                margin-left: 10px;
+                z-index: 50;
+                position: absolute;
+                color: #FFF;
+                text-align: center;
+            }
+        }
+    }
+}
+.event-carusel-pages{
+    text-align: center;
+    div{
+        width: 40px;
+        height: 15px;
+        background: #c6c6c6;
+        display: inline-block;
+        margin: 20px 5px;
+        &.active{
+            background: #7a7a7a;
+        }
+    }
+}
+.radio .required:after{
+    content: '';
+}
