--- a/src/AdminBundle/Resources/views/menu.html.twig
+++ b/src/AdminBundle/Resources/views/menu.html.twig
@@ -2,12 +2,6 @@
     <h2 class="modal-title">Навигация</h2>
     <ul class="nav list-group">
         <li class="">
-            <a href="{{ path('admin_menu_list') }}">
-                <i class="glyphicon glyphicon-th-list"></i>
-                Меню сайта
-            </a>
-        </li>
-        <li class="">
             <a href="{{ path('admin_page_list') }}">
                 <i class="glyphicon glyphicon-align-justify"></i>
                 Страницы сайта
@@ -16,7 +10,7 @@
         <li class="">
             <a href="{{ path('admin_publication_list') }}">
                 <i class="glyphicon glyphicon-align-justify"></i>
-                Публикации
+                Новости
             </a>
         </li>
         <li class="">
@@ -50,53 +44,9 @@
             </a>
         </li>
         <li class="">
-            <a href="{{ path('admin_partner_list') }}">
-                <i class="glyphicon glyphicon-user"></i>
-                Партнеры
-            </a>
-        </li>
-
-        <li class="">
             <a href="{{ path('admin_user_list') }}">
                 <i class="glyphicon glyphicon-user"></i>
                 Пользователи
-            </a>
-        </li>
-        <li class="">
-            <a href="{{ path('admin_testquestion_list') }}">
-                <i class="glyphicon glyphicon-th-list"></i>
-                Опросы
-            </a>
-        </li>
-        <li class="">
-            <a href="{{ path('admin_stats_list') }}">
-                <i class="glyphicon glyphicon-stats"></i>
-                статистика
-            </a>
-        </li>
-        <li class="">
-            <a href="{{ path('admin_organization_list') }}">
-                <i class="glyphicon glyphicon-list-alt"></i>
-                Организации
-            </a>
-        </li>
-        <li class="">
-            ---------------------------
-        </li>
-        <li class="">
-            <a href="{{ path('admin_journal_list') }}">
-                <i class="glyphicon glyphicon-list-alt"></i>
-                Журналы
-            </a>
-        </li>
-
-        <li class="">
-                ---------------------------
-        </li>
-        <li class="">
-            <a href="{{ path('admin_course_list') }}">
-                <i class="glyphicon glyphicon-list-alt"></i>
-                Курсы
             </a>
         </li>
     </ul>
