--- a/src/AppBundle/Resources/public/less/common.less
+++ b/src/AppBundle/Resources/public/less/common.less
@@ -29,6 +29,9 @@ body{
 a{
     cursor: pointer !important;
     color: #fc113c;
+    &:hover{
+        color: #9b0d27;
+    }
 }
 
 
@@ -47,13 +50,13 @@ h1.blue-text{
 }
 
 .blue-text{
-    color: #0e66a2;
+    color: @color-red;
 }
 .red{
     color: #CC0000;
 }
 .blue-icon{
-    color: #0e66a2;
+    color: @color-red;
 }
 .body{
     overflow-x: hidden;
@@ -227,7 +230,7 @@ nav .navbar-nav li:hover{
 .new-item{
     padding-bottom: 10px;
     padding-top: 20px;
-    border-bottom: 1px dashed darkgray;
+    //border-bottom: 1px dashed darkgray;
 }
 .new-item-title{
     font-size: 17px;
