--- a/src/AppBundle/Resources/views/Publication/event.html.twig
+++ b/src/AppBundle/Resources/views/Publication/event.html.twig
@@ -15,13 +15,13 @@
 {% endblock %}
 
 {% block content %}
-    <div class="col-xs-4" style="padding-left: 0">
-        {{ render(controller("AppBundle:Widget:calendar" )) }}
-    </div>
-    <div class="col-xs-8" style="padding-right: 0">
-        <h1 class="blue-text">{{ event.title }}</h1>
+    <div class="col-lg-10 col-lg-offset-1" style="padding-right: 0">
         <div class="row">
+            <div class="col-xs-4">
+                <img src="{{ event.preview.path }}" class="img-thumbnail">
+            </div>
             <div class="col-xs-6">
+                <h1 class="blue-text" style="margin-top: 0">{{ event.title }}</h1>
                 <ul class="event-params">
                     {% if event.specialties | length > 0 %}
                         <li><b>Специальности:</b>
@@ -33,16 +33,10 @@
                             {% endfor %}
                         </li>
                     {% endif %}
-                    {% if event.partner != null %}
-                        <li><b>Партнеры:</b> {{ event.partner }}</li>
-                    {% endif %}
 
                     {% if event.start != null %}
                         <li>
                             <b>Дата начала:</b>     {{ event.start | date('d.m.Y') }}
-                            {% if time != null %}
-                                {{ event.time | date('H:i') }}
-                            {% endif %}
                         </li>
                     {% endif %}
                     {% if event.end != null %}
@@ -64,31 +58,15 @@
         <div class="body">
             {{ event.body | raw }}
         </div>
-        <div class="row row-params">
-            <div class="col-xs-5" style="padding-top: 5px;">
-                {#<span style="font-size: 12px">Расказать друзьям&nbsp;&nbsp;</span>#}
+        <hr />
+        <div class="row">
+            <span style="font-size: 14px; float: left;padding-top: 8px;padding-left: 15px;">Расказать друзьям&nbsp;&nbsp;</span>
+            <div class="col-xs-8" style="padding-top: 5px;">
                 <script type="text/javascript" src="//yastatic.net/es5-shims/0.0.2/es5-shims.min.js" charset="utf-8"></script>
                 <script type="text/javascript" src="//yastatic.net/share2/share.js" charset="utf-8"></script>
-                <div class="ya-share2" data-services="vkontakte,facebook,odnoklassniki,gplus,twitter" data-counter="" style="text-align: left; "></div>
-            </div>
-            <div class="col-xs-4">
-                {% if event.specialties | length > 0 %}
-                    <b>Специальности:</b>
-                    {% for s in event.specialties  %}
-                        {{ s.title }}{% if s != event.specialties | last %},{% endif %}
-                    {% endfor %}
-                {% endif %}
-            </div>
-            <div class="col-xs-3 text-right">
-                <div style="padding-top: 10px; padding-bottom: 6px">
-                    <span class="glyphicon glyphicon-calendar"></span> {{ event.created | date('d.m.Y') }}
-                </div>
+                <span class="ya-share2" data-services="vkontakte,facebook,odnoklassniki,gplus,twitter" data-counter="" style="text-align: left; "></span>
             </div>
         </div>
-        <br />
-        {% if event.isAllowCommentary == true %}
-            {% include '@App/Publication/comments.html.twig'  with {'comments': event.comments, 'id' : event.id, 'type': 'event' } %}
-        {% endif %}
     </div>
 
 {% endblock %}
