--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -72,7 +72,6 @@
                                         <li><a href="{{ path('admin_main') }}">В админ панель</a></li>
                                     {% endif %}
                                     <li><a href="{{ path('fos_user_profile_edit') }}">В профиль</a></li>
-                                    <li><a href="{{ path('record_book') }}">Зачетка</a></li>
                                     <li role="separator" class="divider"></li>
                                     <li><a href="{{ path('fos_user_security_logout') }}">Выйти</a></li>
                                 </ul>
@@ -140,22 +139,22 @@
                 <div>
                     <ul class="footer-other">
                         <li>
-                            <a href="{{ path('page',{'url' : 'contacts'}) }}">О НАС</a>
+                            <a href="{{ path('page',{'url' : 'about'}) }}">О НАС</a>
                         </li>
                         <li>
-                            <a href="{{ path('page',{'url' : 'contacts'}) }}">ПОЛИТИКА РЕДАКЦИИ</a>
+                            <a href="{{ path('page',{'url' : 'politicy'}) }}">ПОЛИТИКА РЕДАКЦИИ</a>
                         </li>
                         <li>
-                            <a href="{{ path('page',{'url' : 'contacts'}) }}">ПОЛЬЗОВАТЕЛЬСКОЕ СОГЛАШЕНИЕ</a>
+                            <a href="{{ path('page',{'url' : 'eula'}) }}">ПОЛЬЗОВАТЕЛЬСКОЕ СОГЛАШЕНИЕ</a>
                         </li>
                         <li>
-                            <a href="{{ path('page',{'url' : 'contacts'}) }}">ПАРТНЕРЫ</a>
+                            <a href="{{ path('page',{'url' : 'partners'}) }}">ПАРТНЕРЫ</a>
                         </li>
                         <li>
                             <a href="{{ path('page',{'url' : 'contacts'}) }}">КОНТАКТЫ</a>
                         </li>
                         <li>
-                            <a href="{{ path('page',{'url' : 'contacts'}) }}">ОБРАТНАЯ СВЯЗЬ</a>
+                            <a href="{{ path('page',{'url' : 'feedback'}) }}">ОБРАТНАЯ СВЯЗЬ</a>
                         </li>
                     </ul>
                 </div>
