--- a/src/AppBundle/Resources/public/less/common.css
+++ b/src/AppBundle/Resources/public/less/common.css
@@ -28,6 +28,9 @@ a:hover {
   background: #383838;
   border: 1px solid #050505;
 }
+.btn-primary:hover {
+  background: #2a2a2a;
+}
 h1.blue-text {
   font-size: 22px;
   font-family: 'HelveticaNeue-Light';
@@ -63,6 +66,12 @@ h1.blue-text {
 }
 .form-control {
   border-radius: 0;
+}
+.form-control:focus {
+  border-color: rgba(252, 17, 60, 0.57);
+  outline: 0;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(252, 17, 60, 0.6);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(252, 17, 60, 0.6);
 }
 .header > div {
   height: 100%;
@@ -216,10 +225,11 @@ nav .navbar-nav li:hover a {
   border: 1px solid #FFF;
 }
 .day.active {
-  background: #CCC;
+  background: #333 !important;
   color: #FFFFFF;
 }
-.day.today {
+.day.today,
+.day.today > * {
   background: #fc113c;
   color: #FFFFFF;
 }
@@ -237,7 +247,7 @@ nav .navbar-nav li:hover a {
   border: 1px solid #BDDAEB;
 }
 .claendar-tabs .active {
-  background: #88BADD;
+  background: #CCC;
 }
 #calendar-widget {
   border: 1px solid #BDDAEB;
@@ -384,7 +394,7 @@ table.table-th-bold tr th {
   font-size: 18px;
 }
 .edit-title {
-  color: #337AB7;
+  color: #fc113c;
   font-size: 16px;
   padding: 10px;
 }
@@ -446,7 +456,7 @@ th.picker-switch {
 }
 .jqvmap-zoomin,
 .jqvmap-zoomout {
-  background: #0088cc;
+  background: #CCC;
   border-radius: 2px;
   color: white;
   height: 20px;
