--- a/src/AppBundle/Resources/views/Publication/eventList.html.twig
+++ b/src/AppBundle/Resources/views/Publication/eventList.html.twig
@@ -5,11 +5,59 @@
     <script src="{{ asset('assets/vendor/moment/moment.js') }}"></script>
     <script src="{{ asset('assets/vendor/moment/locale/ru.js') }}"></script>
     <script src="{{ asset('assets/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js') }}"></script>
+    <script>
+        $(document).ready(function(){
+            $('.form-calendar').datetimepicker({
+            sideBySide: true,
+            format: "DD.MM.YYYY"
+            });
+        });
+    </script>
+{% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('assets/vendor/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css') }}" />
 {% endblock %}
 
 {% block content %}
     <div class="col-lg-offset-1 col-lg-10" style="padding-right: 0">
         <div class="title"><div>{{ category }}</div></div>
+        <div class="filter">
+            <form class="form-inline">
+                с <div class="form-group">
+                    {{ form_widget(form.start) }} -
+                    {{ form_widget(form.end) }}
+                </div>
+                <div class="form-group">
+                    {{ form_widget(form.search) }}
+                </div>
+                <div class="form-group">
+                    {{ form_widget(form.specialty) }}
+                </div>
+                <div class="form-group">
+                    {{ form_widget(form.submit) }}
+                </div>
+                {#<div class="form-group">#}
+                    {#с <input type="text" class="form-control form-calendar" style="max-width: 125px" name="start">#}
+                    {#- <input type="text" class="form-control form-calendar" style="max-width: 125px" name="end">#}
+                {#</div>#}
+                {#<div class="form-group">#}
+                    {#<select class="form-control" name="specialty">#}
+                        {#<option>Все специальности</option>#}
+                        {#{% for s in specialties %}#}
+                            {#<option>{{ s }}</option>#}
+                        {#{% endfor %}#}
+                    {#</select>#}
+                {#</div>#}
+                {#<div class="form-group">#}
+                    {#<input type="text" class="form-control" placeholder="Ключевое слово" style="max-width: 300px" name="search">#}
+                {#</div>#}
+                {#<div class="form-group">#}
+                    {#<button class="btn btn-primary">Найти</button>#}
+                {#</div>#}
+            </form>
+        </div>
         <div>
             {% for p in events %}
                 <div class="new-item">
