--- a/src/AppBundle/Resources/views/menu.html.twig
+++ b/src/AppBundle/Resources/views/menu.html.twig
@@ -12,7 +12,7 @@
 
     <div class="collapse navbar-collapse" id="menu">
         <ul class="nav navbar-nav">
-            <li class="active"><a href="">КОНФЕРЕНЦИИ</a></li>
+            <li class="active"><a href="{{ path('events',{'url': 'conference'}) }}">КОНФЕРЕНЦИИ</a></li>
             <li>
                 <a href="{{ path('page',{'url' : 'about'}) }}">Об организации</a>
                 {#<div class="submenu">#}
