--- a/app/Resources/FOSUserBundle/views/Registration/register.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register.html.twig
@@ -63,7 +63,7 @@
     <div class="container main-registration">
         <div class="row">
             <div class="col-xs-offset-3 col-xs-5">
-                <div class="title text-uppercase text-center"><div>Регистрация</div></div>
+                <div class="title text-uppercase"><div>Регистрация</div></div>
                 <br />
                 {{ form_start(form, {'action': path('fos_user_registration_register'), 'attr': {'id': 'registration_form'}}) }}
                 {{ form_widget(form) }}
