--- a/src/AppBundle/Resources/views/Publication/event.html.twig
+++ b/src/AppBundle/Resources/views/Publication/event.html.twig
@@ -15,7 +15,8 @@
 {% endblock %}
 
 {% block content %}
-    <div class="col-lg-10 col-lg-offset-1" style="padding-right: 0">
+    <div class="col-xs-7 col-xs-offset-1" style="padding-right: 0">
+        <br />
         <div class="row">
             <div class="col-xs-4">
                 <img src="{{ event.preview.path }}" class="img-thumbnail">
@@ -67,6 +68,9 @@
                 <span class="ya-share2" data-services="vkontakte,facebook,odnoklassniki,gplus,twitter" data-counter="" style="text-align: left; "></span>
             </div>
         </div>
+    </div>
+    <div class="col-xs-3">
+        {{ render(controller("AppBundle:Widget:banner" )) }}
     </div>
 
 {% endblock %}
