--- a/src/AdminBundle/Resources/views/menu.html.twig
+++ b/src/AdminBundle/Resources/views/menu.html.twig
@@ -44,6 +44,12 @@
             </a>
         </li>
         <li class="">
+            <a href="{{ path('admin_calendar_list') }}">
+                <i class="glyphicon glyphicon-picture"></i>
+                Календарь
+            </a>
+        </li>
+        <li class="">
             <a href="{{ path('admin_user_list') }}">
                 <i class="glyphicon glyphicon-user"></i>
                 Пользователи
