--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -93,7 +93,8 @@
                 {{ render(controller("AppBundle:Default:carusel" )) }}
             </div>
         {% endif %}
-        {{ render(controller("AppBundle:Default:generateMenu" )) }}
+        {#{{ render(controller("AppBundle:Default:generateMenu"  )) }}#}
+        {{ include('@App/menu.html.twig') }}
         <div class="content">
             {% block content %}
                 {#<div class="row">#}
