--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -66,7 +66,8 @@
 
 
 
-    <div class="hidden-sm col-md-3">
+    <div class="hidden-sm col-md-3 text-right">
+        <div style="max-width: 240px; float: right;" class="text-left">
         {% if importants | length > 0 %}
             <div class="title"><div>ВАЖНЫЕ СОБЫТИЯ</div></div>
             {% for i in importants %}
@@ -80,5 +81,6 @@
             {% endfor %}
         {% endif %}
         {{ render(controller("AppBundle:Widget:banner" )) }}
+        </div>
     </div>
 {% endblock %}
